# GL-Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md  guide.md  ideas.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
cyCodeBase/: cyBVH.h  cyCore.h
doc/: architecture.md  devlog.md  guide.md
renderer/: RayTracer.cpp  RayTracer.hpp
scene/: Animation.hpp  Camera.hpp  Mesh.hpp  Scene.hpp  SceneConfig.cpp  SceneConfig.hpp  SceneTypes.hpp
shader/: compute.glsl  ray_tracing.comp  ray_tracing.glsl
utils/: ShaderLoader.cpp  ShaderLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
